--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@ layout: compress
     <header class="header">
         <h1>Modern Blog<span>A Clean, Fresh Minimal Look.</span></h1>
         <nav class="links">
-            <a href="www.baidu.com"><i class="fa fa-twitter-square fa-3x"></i></a>
+            <!-- csdn地址 -->
+            <a href="https://blog.csdn.net/java_jet"><img class="fa  fa-3x" src="img/icon/csdn_icon.png"></a>
             <a href="#"><i class="fa fa-instagram fa-3x"></i></a>
-            <a href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
-            <a href="#"><i class="fa fa-tumblr-square fa-3x"></i></a>
+            <!--<a href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
+            <a href="#"><i class="fa fa-tumblr-square fa-3x"></i></a>-->
         </nav>
     </header>
     <div class="content">
