--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: compress
         <h1>Modern Blog<span>A Clean, Fresh Minimal Look.</span></h1>
         <nav class="links">
             <!-- csdn地址 -->
-            <a href="https://blog.csdn.net/java_jet"><img class="fa  fa-3x" src="img/icon/csdn_icon.png"></a>
+            <a href="https://blog.csdn.net/java_jet"><img style="height: 60px; width: 60px;" src="img/icon/csdn_icon.png"></a>
             <a href="#"><i class="fa fa-instagram fa-3x"></i></a>
             <!--<a href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
             <a href="#"><i class="fa fa-tumblr-square fa-3x"></i></a>-->
