--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ layout: compress
     <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
     <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css"/>
     <link rel="stylesheet" type="text/css" href="css/modern-blog.css"/>
+    <!-- 自定义CSS -->
+    <link rel="stylesheet" type="text/css" href="css/custom.css"/>
     <!--[if IE]>
     <script type="text/javascript" src="js/vendors/html5.min.js"></script>
     <![endif]-->
@@ -24,15 +26,27 @@ layout: compress
             root.setAttribute('class', 'ff');
         }
     </script>
+    <style>
+        #csdn
+        {
+            /*#text-align:center;
+            #border:2px solid #a1a1a1;
+            #padding:10px 40px;
+            #background:#dddddd;
+            #width:350px;*/
+            border-radius:25px;
+            -moz-border-radius:25px; /* 老的 Firefox */
+        }
+    </style>
 </head>
 <body class="body">
 <div class="container">
     <header class="header">
-        <h1>Modern Blog<span>A Clean, Fresh Minimal Look.</span></h1>
+        <h1>我是馒头啊 Blog<span>馒头的个人博客</span></h1>
         <nav class="links">
             <!-- csdn地址 -->
-            <a href="https://blog.csdn.net/java_jet"><img style="height: 40px; width: 40px;" src="img/icon/csdn_icon.png"></a>
-            <a href="#"><i class="fa fa-instagram fa-3x"></i></a>
+            <a href="https://blog.csdn.net/java_jet"><img id="csdn" style="height: 40px; width: 40px;" src="img/icon/csdn_icon.png"></a>
+            <!--<a href="#"><i class="fa fa-instagram fa-3x"></i></a>-->
             <!--<a href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
             <a href="#"><i class="fa fa-tumblr-square fa-3x"></i></a>-->
         </nav>
